--- a/index.html
+++ b/index.html
@@ -1251,7 +1251,7 @@ tempor incididunt ut labore et dolore magna aliqua.">
 
 
 <div class="product-price">
-from $20.00
+$20.00
 
 </div>
 
@@ -1300,7 +1300,7 @@ from $20.00
     <div class="variant-option-title">Розмір: </div>
     <div class="variant-select-wrapper" data-text="Select Size">
       <select aria-label="Select Size" data-variant-option-name="Size">
-        <option value="">Select Size</option>
+        <option value="">Виберіть розмір</option>
         <option value="Small">Small</option><option value="Medium">Medium</option><option value="Large">Large</option>
       </select>
     </div>
